src/worker/snapshots/roadster__worker__job__tests__job_serde@job_serde.snap
---
source: src/worker/job.rs
expression: job
---
{
  "metadata": {
    "id": "[uuid]",
    "worker_name": "foo",
    "periodic": {
      "hash": 1234,
      "schedule": "* * * * * *"
    }
  },
  "args": {
    "foo": "bar"
  }
}
