src/worker/snapshots/roadster__worker__job__tests__job_serde_no_periodic@job_serde_no_periodic.snap
---
source: src/worker/job.rs
expression: job
---
{
  "metadata": {
    "id": "[uuid]",
    "worker_name": "foo"
  },
  "args": {
    "foo": "bar"
  }
}
