src/worker/snapshots/roadster__worker__job__tests__periodic_hash@case_01.snap
---
source: src/worker/job.rs
expression: "super::periodic_hash(name, &schedule, &value)"
---
11189630487790136136
